<resources>
    <string name="app_name">Currency Converter</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="sign_up">Sign up</string>
    <string name="currency">Currency</string>
    <string name="dot">.</string>
    <string name="afn">AFN</string>
    <string name="refresh">refresh</string>
    <string name="convert">Convert</string>
    <string name="contact">Contact</string>
    <string name="converter">Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
    <string name="erreur1">There is no connection, please activate it!!!</string>
    <string name="erreur2">Try another time!!!!</string>
</resources>